Update and rename city.html to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
             <ul>
-                    <li><a href="CITY.html">Phoenix Scottsdale</a></li>
+                    <li><a href="index.html">Phoenix Scottsdale</a></li>
                     <li><a href="city 2.html">Tax Rate</a></li>
                     <li><a href="city 3.html">Scottsdale Attractions</a></li>
                     <li><a href="city 4.html">Scottsdale Food Options</a></li>
